--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "@strapi/blocks-react-renderer": "^1.0.1",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
