--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-image-gallery": "^1.3.0"
+    "react-image-gallery": "^1.3.0",
+    "react-photo-album": "^3.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
