--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-image-gallery": "^1.3.0",
-    "react-photo-album": "^3.0.2"
+    "react-photo-album": "^3.0.2",
+    "react-responsive-masonry": "^2.3.0",
+    "yet-another-react-lightbox": "^3.21.6"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-image-gallery": "^1.2.4",
+    "@types/react-responsive-masonry": "^2.1.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "husky": "^9.1.6",
