--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@douyinfe/semi-ui": "^2.77.1",
     "@strapi/blocks-react-renderer": "^1.0.1",
     "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.7.7",
